# futil

./: FUtil.cabal  README  g  install
src/: FUtil.Check.hs  FUtil.hs  Test.hs  align.hs  sorth.hs  wordSwap.hs
