name:            FUtil
version:         0.1
synopsis:        generic utility library and scripts useful for many projects
license:         BSD3
license-file:    LICENSE
author:          futil@lists.facebook.com
build-type:      Simple
build-depends:   HSH >= 2.0 && < 2.1,
                 MonadRandom >= 0.1 && < 0.2,
                 array >= 0.4 && < 0.5,
                 base >= 4.5 && < 4.6,
                 bytestring >= 0.9 && < 0.10,
                 containers >= 0.4 && < 0.5,
                 mtl >= 2.0 && < 2.1,
                 old-locale >= 1.0 && < 1.1,
                 process >= 1.1 && < 1.2,
                 random >= 1.0 && < 1.1,
                 time >= 1.4 && < 1.5

exposed-modules: FUtil
hs-source-dirs:  src
