name:            FUtil
version:         0.1
synopsis:        generic utility library and scripts useful for many projects
license:         BSD3
license-file:    LICENSE
author:          futil@lists.facebook.com
build-type:      Simple
build-depends:   HSH         < 2.1,
                 MonadRandom < 0.2,
                 array       < 0.5,
                 base        < 4.6,
                 bytestring  < 0.10,
                 containers  < 0.6,
                 mtl         < 2.2,
                 old-locale  < 1.1,
                 process     < 1.2,
                 random      < 1.1,
                 time        < 1.5

exposed-modules: FUtil
hs-source-dirs:  src
